Fixes line spacing while keeping proper navbar height

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ main.wrapper {
 p.bio {
     margin: 1em;
     font-size: 1em;
+    line-height: 1.5em;
 }
 
 p.origin {
